# PrintManager

./: .gitignore  ProjectOverview.md  README.md  daily-git-workflow.md  git-command-glossary.md  morning-git-sync-windows.bat  project-summary 01102024.md  project-summary 02102024.md
01102024/: build.xml  install.bat
01102024-night/src/main/cpp/: PrintInterceptorNative.cpp
01102024/src/main/java/: PrintInterceptor.java
02102024/: CMakeLists.txt
02102024/src/main/cpp/: PrintInterceptorNative.cpp  com_example_PrintInterceptor.h
02102024/src/main/java/com/example/: PrintInterceptor.java
PrintJobInterceptor/: PrintJobInterceptor.sln
PrintJobInterceptor/PrintJobInterceptorNative/: PrintJobInterceptorNative.cpp  PrintJobInterceptorNative.vcxproj  PrintJobInterceptorNative.vcxproj.filters
PrintJobInterceptor/PrintJobInterceptorNative/x64/Debug/: PrintJobInterceptorNative.exe.recipe  PrintJobInterceptorNative.ilk  vc143.idb
PrintJobInterceptor/PrintJobInterceptorNative/x64/Debug/PrintJob.bff834c4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PrintJobInterceptorNative.lastbuildstate  link.11712.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
PrintJobInterceptor/x64/Debug/: PrintJobInterceptorNative.exp  PrintJobInterceptorNative.lib
